Update to front-end; Start to backend

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="./res/Kaart Final Logo_Circle.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="../src/App.css">
     <meta
     name="description"
     content="Web site created using create-react-app"
@@ -24,10 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>GEM: An Online Mapcss Editor</title>
-    <link rel="stylesheet" href="./Styles/header.css">
   </head>
   <body>
-    <header class="header" background="." >
+    <header>
       <div>
           <h1>
             
@@ -47,7 +47,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <footer>
-      <link rel="stylesheet" href="./Styles/footer.css">
     </footer>
   </body>
 </html>
