--- a/react/public/index.html
+++ b/react/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>GEM: An Online Mapcss Editor</title>
+    <script> window.token="{{flask_token}}"</script>
   </head>
   <body>
     <header>
