--- a/react/src/index.html
+++ b/react/src/index.html
@@ -23,4 +23,28 @@
     <footer>
     </footer>
   </body>
+
+
+  <script>
+    function getOrMakeStorage() {
+      if (localStorage.getItem('data') == null || localStorage.getItem('data') == "\"\"") {
+        localStorage.setItem('data', '[{}]');
+      }
+    
+      return JSON.parse(localStorage.getItem('data'));
+    }
+
+    function setStorage() {
+      var jsonData = getOrMakeStorage();
+      var flaskData = {{ flask_data }};
+      if (flaskData) {
+        for (key in flaskData) {
+          jsonData[key] = flaskData[key];
+        }
+      }
+    }
+
+    console.log(getOrMakeStorage());
+
+  </script>
 </html>
