--- a/react/src/index.html
+++ b/react/src/index.html
@@ -15,6 +15,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GEM: An Online Mapcss Editor</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
   <body>
     <div> 
