--- a/react/src/index.html
+++ b/react/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./res/Kaart Final Logo_Circle.svg">
+    <link rel="icon" href="/static/react/res/Kaart Final Logo_Circle.svg" >
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
