--- a/react/src/index.html
+++ b/react/src/index.html
@@ -14,7 +14,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GEM: An Online Mapcss Editor</title>
+    <title>Kaart | GEM - Mapcss Editor</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
   <body>
